k8s/curl-me/curl-me.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl-me
  labels:
    app: curl-me
spec:
  replicas: 3
  selector:
    matchLabels:
      app: curl-me
  template:
    metadata:
      labels:
        app: curl-me
    spec:
      containers:
        - name: curl-me
          image: "localhost:32000/curl-me"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: curl-me
spec:
  type: ClusterIP
  # type: NodePort
  selector:
    app: curl-me
  ports:
    # nodePort:   a static port assigned on each node
    # port:       port exposed internally in the ClusterIP
    # targetPort: the container port to send requests to
    - port: 3000 # curl CLUSTER_IP:port
      targetPort: 8080
      # nodePort: 30001 # curl HOST_IP:nodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
    - http:
        paths:
          - path: /curl-me
            pathType: Prefix
            backend:
              service:
                name: curl-me
                port:
                  number: 3000
